--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
@@ -86,7 +86,7 @@ new-sla=Nou SLA
 next=Següent
 no-current-metrics=No hi ha analítica actual
 no-results-found=No s'ha trobat cap resultat.
-no-results-were-found=No s'ha trobat cap resultat.
+no-results-were-found=No s'han trobat resultats.
 no-sla-records-for-this-item=No s'ha trobat cap informe d'SLA per a aquest article.
 no-slas-are-defined-for-this-process=No s'ha definit cap SLA per a aquest procés.
 no-slas-yet=Encara no hi ha cap SLA
