--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
@@ -86,7 +86,7 @@ new-sla=Új SLA
 next=Következő
 no-current-metrics=Nincsenek aktuális mérési adatok
 no-results-found=Nem található eredmény.
-no-results-were-found=Nem találhatók eredmények.
+no-results-were-found=Nincs találat.
 no-sla-records-for-this-item=Ehhez az elemhez nincs SLA bejegyzés.
 no-slas-are-defined-for-this-process=Ehhez az eljáráshoz nincs SLA meghatározva.
 no-slas-yet=Még nincs SLA
