--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
@@ -86,7 +86,7 @@ new-sla=新しいSLA
 next=次へ
 no-current-metrics=最新統計情報はありません
 no-results-found=結果が見つかりません。
-no-results-were-found=結果が見つかりません
+no-results-were-found=オプションはありません
 no-sla-records-for-this-item=この項目にはSLAレコードがありません。
 no-slas-are-defined-for-this-process=このプロセスに定義されているSLAはありません。
 no-slas-yet=まだSLAはありません
