--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ta_IN.properties
@@ -86,7 +86,7 @@ new-sla=New SLA
 next=Next
 no-current-metrics=No Current Metrics
 no-results-found=No results found.
-no-results-were-found=No results were found.
+no-results-were-found=Results எதுவும் இல்லை.
 no-sla-records-for-this-item=No SLA records for this item.
 no-slas-are-defined-for-this-process=No SLAs are defined for this process.
 no-slas-yet=No SLAs Yet
