--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_en.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_en.properties
@@ -1,26 +1,26 @@
-active-features=Active features
-add-more-features=Add more features
+active-features=Active Features
+add-more-features=Add More Features
 all-rights-reserved=All Rights Reserved
-cancel-your-subscription=Cancel your subscription
-creating-an-unique-link=Creating an unique link
+cancel-your-subscription=Cancel Your Subscription
+creating-an-unique-link=Creating an Unique Link
 disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy.
 explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days.
-go-to-x=Go to {0}
-hello=hello
+go-to-x=Go to {0}.
+hello=Hello
 loading-instance=Let's get Liferay Commerce instance up and running.
 osb-commerce-provisioning=OSB Commerce Provisioning
 password=Password
 return-to-full-page=Return to Full Page
-setting-up-a-new-instance=Setting up a new instance
-setting-up-administrator=Setting up administrator
+setting-up-a-new-instance=Setting Up a New Instance
+setting-up-administrator=Setting Up Administrator
 start-trial=Start Trial
 start-your-demo=Start Your Demo
-start-your-private-demo=Start your private demo
+start-your-private-demo=Start your private demo.
 stay-up-to-date=Stay up to date!
-switch-to=Switch to
-trial-period-expires-in-days=The trial period will expire in 14 days
-try-liferay-commerce=Try Liferay Commerce for 30 days
-wait-time=This may take up to 2 minutes
+switch-to=Switch To
+trial-period-expires-in-days=The trial period will expire in 14 days.
+try-liferay-commerce=Try Liferay Commerce for 30 days.
+wait-time=This may take up to 2 minutes.
 welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com.
 welcome-to-your-demo=Welcome to Your Demo
 work-email=Work Email
