--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -16550,6 +16550,7 @@ the-structure-cannot-be-deleted-because-it-is-being-used-by-one-or-more-structur
 the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-structure-links=Rakennetta ei voi poistaa, koska siihen on liitetty yksi tai useampi rakennelinkki.
 the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-templates=Rakennetta ei voi poistaa, koska sitä käyttää yksi tai useampi esitysmalli.
 the-structure-could-not-be-found=Rakennetta ei löytynyt.
+the-structure-was-imported-without-custom-view=The structure was imported without Custom View. (Automatic Copy)
 the-structure-was-not-successfully-imported=Rakenteen tuominen ei onnistunut.
 the-structure-was-successfully-imported=Rakenteen tuominen onnistui.
 the-structure-you-selected-is-not-valid-for-this-folder=Valitsemasi asiakirjatyyppi ei ole kelvollinen tähän kansioon.
