--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -16551,6 +16551,7 @@ the-structure-cannot-be-deleted-because-it-is-being-used-by-one-or-more-structur
 the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-structure-links=하나 이상의 구조 링크에서 구조가 필요하므로 구조를 삭제할 수 없습니다. (Automatic Translation)
 the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-templates=하나 이상의 템플릿에서 구조가 필요하므로 삭제할 수 없습니다. (Automatic Translation)
 the-structure-could-not-be-found=구조는 발견될 수 없었다.
+the-structure-was-imported-without-custom-view=The structure was imported without Custom View. (Automatic Copy)
 the-structure-was-not-successfully-imported=The structure was not successfully imported. (Automatic Copy)
 the-structure-was-successfully-imported=The structure was successfully imported. (Automatic Copy)
 the-structure-you-selected-is-not-valid-for-this-folder=선택한 구조는 이 폴더에 대해 유효하지 않습니다. (Automatic Translation)
